prevent drop in containers that are too small

--- a/public/global.css
+++ b/public/global.css
@@ -20,3 +20,7 @@
 #app .wrap {
     white-space: pre-wrap;
 }
+
+#app .btn-light.dragover {
+    background-color: lightblue;
+}
